# ViroMiR

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml  requirements.txt
benchmark/: FROZEN.md
benchmark/remoteRNA22v2/: Parameters.properties  instructions.txt  myMirInputFile.txt  myTranscriptInputFile.txt  test_rna22.py
benchmark/tools/: benchmark_with_rna22.py  model_comparison.py  run_cross_virus_benchmark.py  virmirna_e2e_benchmark.py
examples/: hiv_500_test.fa  hiv_all_test.fa  hiv_exp_mirnas.fa  hiv_mirnas.fa  hiv_mirnas_mixed.fa  hiv_nef.fa  test_hcv_5utr.fa
viromir/: __init__.py  benchmark.py  scan.py
viromir/model/: viromir_xgb_v1.pkl
